// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get version changes Version 0.0.1 1`] = `
Array [
  "## [0.0.1] - 2019-06-19",
  "",
  "- First release",
  "",
  "",
]
`;

exports[`Get version changes Version 0.1.0 1`] = `
Array [
  "## [0.1.0] - 2019-06-19",
  "### Added",
  "",
  "- Testing",
  "",
  "### Fixed",
  "",
  "- Fixing some bug",
  "",
  "",
]
`;

exports[`Get version changes Version 0.1.0-beta.0 1`] = `
Array [
  "## [0.1.0-beta.0] - 2019-06-19",
  "",
  "- First beta",
  "",
  "",
]
`;

exports[`Unreleased content operations Get content after new release: changelog.md 1`] = `
"# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [1.0.0] - 2014-05-11

- First unreleased
- Second unreleased

### Changed
- Third unreleased

## [0.1.0] - 2019-06-19

### Added
- Testing

### Fixed

- Fixing some bug

## [0.1.0-beta.0] - 2019-06-19

- First beta

## [0.0.1] - 2019-06-19

- First release
"
`;

exports[`Unreleased content operations Get content after new release: changelog2.md 1`] = `
"## [Unreleased]

## [1.0.0] - 2014-05-11

asd

"
`;

exports[`Unreleased content operations Get content after new release: changelog3.md 1`] = `
"## [Unreleased]

## [1.0.0] - 2014-05-11

asd

## [0.1.0]
asdf"
`;
